# cellai

./: .gitignore  README.md  chaotic.ipynb  pyproject.toml  results.txt  simple-rnn-net.npy  simple-rnn.cl  simple-rnn.ipynb  test.ipynb  test.py
